# smw-reader

./: .changelog-config.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  duties.py  example.py  fsf_examples.py  minimal_example.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish-test.yml  publish.yml  release.yml
docs/: CHANGELOG.md  README.md  SMW_SYNTAX.md  index.md  reference.md
docs/api/: ask_endpoint.md
docs/pdoc/: DEVELOPMENT.md
docs/sphinx/: EXAMPLES.md  SMW_SYNTAX.md  api.md  api.rst  changelog.md  conf.py  development.md  index.md
docs/sphinx/_templates/: layout.html  nav-branding.html
site/: 404.html  index.html  objects.inv
site/CHANGELOG/: index.html
site/reference/: index.html
site/search/: search_index.json
src/smw_reader/: __init__.py  client.py  exceptions.py  http_client.py  interfaces.py
src/smw_reader/endpoints/: __init__.py  ask.py  query.py
tests/: test_ask_endpoint.py  test_client.py  test_exceptions.py  test_http_client.py  test_query.py  test_smw_extension_detection.py
