[project]
name = "smw-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kugeleis ", email = "richard.springer@infineon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
smw-reader = "smw_reader:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
